make hover and edit states all align and size correctly for the new title layout

--- a/src/styles/inline-editor.css
+++ b/src/styles/inline-editor.css
@@ -48,6 +48,9 @@
   font-size: 16px;
   padding: 1px 0 1px 0px;
   font-family: Helvetica;
+  span.extra {
+    color: black !important;
+  }
 }
 .inline-editor-hover-project {
   left: 10px;
